valueset fix, all codeblocks use valueset to contain values and have them be edited at runtime, also added an ANY enum tO valuetype which ignores all checks for correct casting (since it can be any value) it'll primarily be used in conditionalblocks where the valuetype is set at runtime.